--- a/content/hsup.mdx
+++ b/content/hsup.mdx
@@ -28,7 +28,7 @@ The program has become a great success among students. Today, every semester, th
     alt="desktop_image"
     width={1200}
     height={600}
-    className="md:mt-[76px] w-full max-w-3xl"
+    className="mt-[76px] w-full max-w-3xl"
   />
 </Fade>
 
