--- a/content/viddl.mdx
+++ b/content/viddl.mdx
@@ -28,7 +28,7 @@ During our two-year collaboration, we managed to build a unified design system l
     alt="desktop_image"
     width={1200}
     height={600}
-    className="md:mt-[76px] w-full max-w-3xl"
+    className="mt-[76px] w-full max-w-3xl"
   />
 </Fade>
 
