--- a/content/hsup.mdx
+++ b/content/hsup.mdx
@@ -16,7 +16,7 @@ The Hungarian Startup University Program (HSUP) is Hungary's first higher educat
 
 ## My Responsibilities
 
-The HSUP program is completely online, students access the course materials through mobile and web applications, and they also take the necessary tests on these platforms during the semester. My task was to design the interfaces of the applications. At the beginning of the project, user needs were already assessed, so I participated in designing the interface.
+The HSUP program is completely online, students access the course materials through mobile and web applications, and they also take the necessary tests on these platforms during the semester. My task was to design the interfaces of the applications.
 
 ## Result
 
