Fix paragraph texts

--- a/content/hsup.mdx
+++ b/content/hsup.mdx
@@ -12,15 +12,23 @@ tags: ["Web application", "Mobile application", "Landing page"]
 
 ## Overview
 
-The Hungarian Startup University Program (HSUP) is Hungary's first higher education-level startup course. HSUP is a two-semester e-learning subject, with the first semester focusing on learning about innovative thinking and the startup world, while the second semester allows students to acquire practical knowledge about business building.
+The Hungarian Startup University Program (HSUP) is Hungary's first higher education-level
+startup course. HSUP is a two-semester e-learning subject, with the first semester
+focusing on learning about innovative thinking and the startup world, while the second
+semester allows students to acquire practical knowledge about business building.
 
 ## My Responsibilities
 
-The HSUP program is completely online, students access the course materials through mobile and web applications, and they also take the necessary tests on these platforms during the semester. My task was to design the interfaces of the applications.
+The HSUP program is completely online, students access the course materials through
+mobile and web applications, and they also take the necessary tests on these platforms
+during the semester. My task was to design the interfaces of these applications.
 
 ## Result
 
-The program has become a great success among students. Today, every semester, thousands of students from more than 30 universities can learn about entrepreneurship through the HSUP system. This is one of my works that I am perhaps most proud of, and I am very happy that it has become this successful.
+The program has become a great success among students. Today, thousands
+of students from more than 30 universities can learn about entrepreneurship through
+the HSUP system. This is one of my works that I am perhaps most proud of, and I am
+very happy that it has become this successful.
 
 <Fade triggerOnce>
   <Image
