--- a/content/viddl.mdx
+++ b/content/viddl.mdx
@@ -12,11 +12,40 @@ tags: ["Web application", "Mobile application", "Package tracking"]
 
 ## Overview
 
-ViddL was founded in 2017 by young people who believed that there was a need for change in the package delivery industry. They thought that with better technological infrastructure, the industry could be renewed, as there had been little innovation in this area in recent years. They started working hard and achieved the goal of delivering thousands of packages every day throughout Hungary. ViddL contracts with large logistics companies and manages the last mile delivery of packages with the help of pedestrian/cyclist couriers. Every morning, thousands of packages arrive at the ViddL depot from the companies, and then the couriers deliver them to the addresses using a mobile application. The recipients are notified about the delivery through a multi-level system. Since they continuously optimize the package route, they are able to tell the exact arrival time of the courier almost to the minute.
+ViddL was founded in 2017 by young people who believed that there was a need for
+change in the package delivery industry. They thought that with better technological
+infrastructure, the industry could be renewed, as there had been little innovation
+in this area in recent years. They started working hard and achieved the goal of
+delivering thousands of packages every day throughout Hungary.
+
+ViddL contracts with large logistics companies and manages the last mile delivery
+of packages with the help of pedestrian/cyclist couriers. Every morning, thousands
+of packages arrive at the ViddL depot from the companies, and then the couriers deliver
+them to the addresses using a mobile application. The recipients are notified about
+the delivery through a multi-level system. Since they continuously optimize the package
+route, they are able to tell the exact arrival time of the courier almost to the
+minute.
+
+## My Responsibilities
+
+I started working with ViddL when the courier application and their internal
+admin system were already done, and the delivery was already in progress. As a startup
+company, the initial system was an MVP with minimal functionality and a slightly
+clumsy appearance, but it managed to handle daily deliveries without major issues.
+My task was to unify the appearance of the ViddL applications and create a design
+system that developers can easily implement. Then based on this system, I had to
+redesign the ViddL applications step by step to make them easier to use.
 
 ## Result
 
-During our two-year collaboration, we managed to build a unified design system library that can be used quickly and efficiently for future developments. We completely redesigned the package tracking system, making it possible to notify recipients much more accurately about the arrival of packages. The courier mobile application also received a fully functional modern interface that better tracks the delivery process and provides simpler use for the couriers. The admin interface also received a new user-centered appearance, making it easier for courier coordinators, depot managers, and management to follow the daily delivery.
+During our two-year collaboration, we managed to build a unified design system library
+that can be used quickly and efficiently for future developments. We completely redesigned
+the package tracking system, making it possible to notify recipients much more accurately
+about the arrival of packages. The courier mobile application also received a fully
+functional modern interface that better tracks the delivery process and provides
+simpler use for the couriers. The admin interface also received a new user-centered
+appearance, making it easier for courier coordinators, depot managers, and management
+to follow the daily delivery.
 
 <Fade triggerOnce>
   <Image
