--- a/content/viddl.mdx
+++ b/content/viddl.mdx
@@ -212,8 +212,8 @@ that I can share with you until then! :)
 
 <Fade triggerOnce>
   <Image
-    src="/img/viddl/viddl_6.png"
-    alt="desktop_image"
+    src="/img/viddl/viddl_8.png"
+    alt="mobile_mockups"
     width={1200}
     height={600}
     className="md:mt-[76px] w-full max-w-3xl my-4"
