Fix phrasing in airtime

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -12,13 +12,17 @@ tags: ["Web application", "Landing page"]
 
 ## Introduction
 
-Airtime is an online UX research tool designed to accelerate the workflow of product teams. It offers two key features: the video call analyzer, which extracts insights and identifies patterns from multiple video calls. You can simply ask questions, and Airtime gathers the answers for you, saving valuable time in the analysis process. The second feature is the website survey widget, which allows users to seamlessly collect and summarize responses directly on their websites, eliminating the need to manually sift through feedback.
+Airtime is an online UX research tool designed to accelerate the workflow of product teams. It offers two key features: the video call analyzer, which extracts insights and identifies patterns from video calls. You can simply ask questions, and Airtime gathers the answers from multiple videos for you, saving valuable time in the analysis process. The second feature is the website survey widget, which allows users to seamlessly collect and summarize responses directly on their websites, eliminating the need to manually review feedback one by one.
 
 ## Problem statement
 
-During our initial research phase, we gathered insights from professionals across various industries who frequently conduct user interviews. The feedback was clear: UX research is a time-intensive and laborious process, often requiring teams to spend countless hours analyzing video call transcripts and reviewing user feedback. This inefficiency made it challenging for companies to derive actionable insights quickly and effectively.
+#### Research Insights & Challenges
 
-On a personal note, when I joined the project, I noticed that the team didn’t yet have a consistent design system or well-established design processes in place. This presented a unique challenge: in addition to addressing the UX research bottleneck, I needed to establish design standards that would bring consistency and streamline the development process moving forward.
+During our initial research phase, we gathered insights from professionals across various industries who frequently conduct user interviews. The feedback was clear: UX research is a time-intensive and tedious process, often requiring teams to spend countless hours analyzing video call transcripts and reviewing user feedback. This inefficiency made it challenging for companies to generate actionable insights quickly and effectively.
+
+#### Design System Development
+
+On a personal note, when I joined the project, I observed an opportunity to enhance the team’s workflow by introducing a consistent design system. While we collaborated on refining our design processes as a small team, the design system was an area that needed more structure. This faced me with a unique challenge: in addition to improving the UX research bottleneck, I worked on establishing a design system to ensure consistency and streamline the development process moving forward.
 
 ## Process
 
@@ -36,7 +40,7 @@ With the initial feature scope defined, I created multiple design variants to ex
 
 #### Prototyping & User Testing
 
-I developed a prototype and participated in user testing to observe and gather feedback directly from researchers. These insights were crucial in refining the design.
+I then moved forward with prototyping the chosen design, integrating the feedback to create a functional version for testing. I took part in user testing to observe and gather direct feedback from researchers, which was crucial in further refining the design before finalizing it.
 
 #### Final Design & Handoff
 
@@ -44,7 +48,7 @@ Based on the feedback from user testing, I refined the design and created the fi
 
 ## Results
 
-What started as a startup with a single feature has evolved into a comprehensive platform that researchers actively use. Through continuous iteration and user feedback, Airtime has grown into a valuable tool that streamlines UX research workflows. Today, Airtime has paying customers, including UX agencies that integrate it into their daily processes, helping them save time and gain deeper insights from user interviews.
+What started as a startup with a single feature has evolved into a platform that researchers actively use. Through continuous iteration and user feedback, Airtime became a valuable tool that streamlines UX research workflows. As we worked together, Airtime reached a point where it gained paying customers, including UX agencies that use it in their daily processes, saving time and gaining deeper insights from user interviews.
 
 <Fade triggerOnce>
   <Image
