Update ogimages on projects

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -5,6 +5,7 @@ duration: "2023-"
 role: "UI designer, webflow developer"
 client: "AirtimeUX"
 link: https://airtimeux.com
+ogimage: /img/airtime/airtime_og.png
 desktopImage: /img/airtime_desktop.png
 mobileImage: /img/airtime_mobile.png
 tags: ["Web application", "Landing page"]
