--- a/content/hsup.mdx
+++ b/content/hsup.mdx
@@ -5,6 +5,7 @@ duration: "2020-2022"
 role: "UI designer"
 client: "NKFIH"
 link: https://hsup.nkfih.gov.hu
+ogimage: /img/hsup/hsup_og.png
 desktopImage: /img/hsup_desktop.png
 mobileImage: /img/hsup_mobile.png
 tags: ["Web application", "Mobile application", "Landing page"]
