--- a/content/viddl.mdx
+++ b/content/viddl.mdx
@@ -5,6 +5,7 @@ duration: "2020-2022"
 role: "UX/UI designer"
 client: "ViddL"
 link: https://viddl.hu
+ogimage: /img/viddl/viddl_og.png
 desktopImage: /img/viddl_desktop.png
 mobileImage: /img/viddl_mobile.png
 tags: ["Web application", "Mobile application", "Package tracking"]
