Figma link, minor project updates, text fix

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -17,33 +17,33 @@ Airtime is an online UX research tool designed to accelerate the workflow of pro
 
 ## Problem statement
 
-#### Research Insights & Challenges
+### Research Insights & Challenges
 
 During our initial research phase, we gathered insights from professionals across various industries who frequently conduct user interviews. The feedback was clear: UX research is a time-intensive and tedious process, often requiring teams to spend countless hours analyzing video call transcripts and reviewing user feedback. This inefficiency made it challenging for companies to generate actionable insights quickly and effectively.
 
-#### Design System Development
+### Design System Development
 
 On a personal note, when I joined the project, I observed an opportunity to enhance the team’s workflow by introducing a consistent design system. While we collaborated on refining our design processes as a small team, the design system was an area that needed more structure. This faced me with a unique challenge: in addition to improving the UX research bottleneck, I worked on establishing a design system to ensure consistency and streamline the development process moving forward.
 
 ## Process
 
-#### Research & Insights Gathering
+### Research & Insights Gathering
 
 We began the project by gathering insights from UX experts to better understand their current research workflows. This included exploring what tools they use, how long the process typically takes, and the main bottlenecks they face. The answers to these questions provided valuable context for shaping our design direction.
 
-#### Team Discussions & Market Overview
+### Team Discussions & Market Overview
 
 Next, we discussed the gathered insights with the team and conducted a market overview to analyze similar tools and their offerings. This research helped us identify opportunities where Airtime could introduce new features and bring additional value to researchers.
 
-#### Design Exploration & Iteration
+### Design Exploration & Iteration
 
 With the initial feature scope defined, I created multiple design variants to explore different solutions. After presenting these concepts to the team, we selected one and made refinements based on their feedback.
 
-#### Prototyping & User Testing
+### Prototyping & User Testing
 
 I then moved forward with prototyping the chosen design, integrating the feedback to create a functional version for testing. I took part in user testing to observe and gather direct feedback from researchers, which was crucial in further refining the design before finalizing it.
 
-#### Final Design & Handoff
+### Final Design & Handoff
 
 Based on the feedback from user testing, I refined the design and created the final variant, which was then handed off to production.
 
