Update airtime text

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -19,7 +19,7 @@ Airtime is an online UX research tool designed to accelerate the workflow of pro
 
 ### Research Insights & Challenges
 
-During our initial research phase, we gathered insights from professionals across various industries who frequently conduct user interviews. The feedback was clear: UX research is a time-intensive and tedious process, often requiring teams to spend countless hours analyzing video call transcripts and reviewing user feedback. This inefficiency made it challenging for companies to generate actionable insights quickly and effectively.
+During the initial research phase, the team gathered insights from professionals across various industries who frequently conduct user interviews. The feedback was clear: UX research is a time-intensive and tedious process, often requiring teams to spend countless hours analyzing video call transcripts and reviewing user feedback. This inefficiency made it challenging for companies to generate actionable insights quickly and effectively.
 
 ### Design System Development
 
