Update airtime text with role section

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -25,6 +25,17 @@ During the initial research phase, the team gathered insights from professionals
 
 On a personal note, when I joined the project, I observed an opportunity to enhance the team’s workflow by introducing a consistent design system. While we collaborated on refining our design processes as a small team, the design system was an area that needed more structure. This faced me with a unique challenge: in addition to improving the UX research bottleneck, I worked on establishing a design system to ensure consistency and streamline the development process moving forward.
 
+## My role
+
+As the only designer on a team of five, I was responsible for all aspects of design, including:
+
+- Crafting wireframes, building prototypes, and designing the UI for both the web app and the landing page
+- Creating a comprehensive design system to ensure visual and functional consistency across the platform and future updates
+- Creating social media designs to support marketing
+- Developing the landing page in Webflow, ensuring it aligned with the design of the platform as a whole
+- Participating in user interviews, and brainstorming sessions as part of the product discovery process
+- Performing competitor analysis to identify opportunities for introducing new and valuable features to the product
+
 ## Process
 
 ### Research & Insights Gathering
