--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -184,5 +184,4 @@ We addressed the gaps by enhancing the AI analysis feature with two key improvem
 
 Airtime evolved from a single-feature startup to a platform actively used by researchers. Through continuous iteration and user feedback, Airtime became an invaluable tool for streamlining UX research workflows, attracting paying customers, including UX agencies, and helping teams save time while gaining deeper insights.
 
-If you’re interested in seeing Airtime in action and trying it live, visit&nbsp;
-[airtimeux.com](https://www.airtimeux.com)
+If you’re interested in seeing Airtime in action and trying it live, visit&nbsp;[airtimeux.com](https://www.airtimeux.com)
